WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123743
[CSS Shapes] image valued shape element margin can cause an ASSERT fail
https://bugs.webkit.org/show_bug.cgi?id=123743
Summary
[CSS Shapes] image valued shape element margin can cause an ASSERT fail
Hans Muller
Reported
2013-11-04 09:24:41 PST
Specifying a non-zero shape-margin value for an image with an above shape-image-threshold pixels 0,0 (for example) will cause an assertion failure.
Attachments
Test case.
(412 bytes, text/html)
2013-11-04 11:02 PST
,
Hans Muller
no flags
Details
Patch
(4.83 KB, patch)
2013-11-04 12:16 PST
,
Hans Muller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Muller
Comment 1
2013-11-04 11:02:43 PST
Created
attachment 215932
[details]
Test case. The attached test case demonstrates that the problem is due to specifying a non-zero margin (not shape-margin) for the shape-outside element.
Hans Muller
Comment 2
2013-11-04 12:16:44 PST
Created
attachment 215940
[details]
Patch When margin-top is specified for a shape's element, the Y coordinates passed to RasterShapeIntervals::getExcludedIntervals() may be negative. This is because the incoming logical coordinates are relative to the content or padding box, depending on the box-sizing property. The RasterShape::getExcludedIntervals() method now clips the incoming Y coordinates to the shape's bounds.
WebKit Commit Bot
Comment 3
2013-11-04 14:37:51 PST
Comment on
attachment 215940
[details]
Patch Clearing flags on attachment: 215940 Committed
r158596
: <
http://trac.webkit.org/changeset/158596
>
WebKit Commit Bot
Comment 4
2013-11-04 14:37:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug